--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-# KrishiNirnay AI - Python dependencies
+# KRISHSAATHI - Python dependencies
 Flask>=3.0.0
 Werkzeug>=3.0.0
 requests>=2.28.0
 openai>=1.0.0
 Flask-SQLAlchemy>=3.1.0
 APScheduler>=3.10.0
+python-dotenv>=1.0.0
+gunicorn>=21.0.0
